TFP-5554: Lagt til historikkInnslag malType2.